// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree props: defaultValue: 1 mutliple: true onChange监听 1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c7 {
  font-size: 1.4rem;
  cursor: pointer;
  color: #333333;
  width: none;
  box-sizing: border-box;
  padding: 0;
  list-style: none;
  display: inline-block;
  position: relative;
  white-space: nowrap;
  display: inline-block;
  margin-right: 2.142857142857143em;
}

.c7:hover > span span {
  border: 1px solid #684fff;
}

.c8 {
  margin: 0;
  outline: none;
  line-height: 1;
  vertical-align: text-bottom;
  display: inline-block;
}

.c11 {
  padding-left: 0.7142857142857143em;
}

.c9 {
  position: absolute;
  left: 0;
  z-index: 1;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.c14 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #fff;
  border: 1px solid #cccccc;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14:hover {
  border: 1px solid #684fff;
}

.c14::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.35714285714285715em;
  top: 0.14285714285714288em;
  width: 0.4285714285714286em;
  height: 0.7142857142857143em;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c10 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #684fff;
  border: 1px solid #684fff;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10:hover {
  border: 1px solid #684fff;
}

.c10::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.2142857142857143em;
  top: 0.5em;
  width: 0.7142857142857143em;
  height: 0.07142857142857144em;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all .2s cubic-bezier(.03,.86,.56,.87);
  transition: all .2s cubic-bezier(.03,.86,.56,.87);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c5 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c13 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c4 {
  min-height: 2.5em;
  line-height: 2.5em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c12 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c16 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c17 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c17:hover {
  background-color: #7a7a7a;
}

.c2 {
  height: 20.833333333333336em;
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c15 {
  height: 20.833333333333336em;
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c15 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0px;
  width: 100%;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <ul
      className="sv-tree sv-tree-show-line c3"
      role="tree-node"
      unselectable="on"
    >
      <li
        className="c4"
        selected={false}
        title="1"
        unselectable="on"
      >
        <span
          className="c5"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_caret_down  c6"
          />
        </span>
        <span>
          <label
            className="c7"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c8"
              onClick={null}
            >
              <input
                className="c9"
                disabled={false}
                onBlur={[Function]}
                type="checkbox"
              />
              <span
                checked={false}
                className="c10"
                disabled={false}
              />
            </span>
            <span
              className="c11"
            >
              1
            </span>
          </label>
        </span>
        <ul
          className="c12"
          data-expanded={true}
        >
          <li
            className="c4"
            selected={false}
            title="1.1"
            unselectable="on"
          >
            <span
              className="c13"
            >
              <i
                className="lugia-icon-direction_caret_down  c6"
              />
            </span>
            <span>
              <label
                className="c7"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="c8"
                  onClick={null}
                >
                  <input
                    className="c9"
                    disabled={false}
                    onBlur={[Function]}
                    type="checkbox"
                  />
                  <span
                    checked={false}
                    className="c14"
                    disabled={false}
                  />
                </span>
                <span
                  className="c11"
                >
                  1.1
                </span>
              </label>
            </span>
          </li>
          <li
            className="c4"
            selected={false}
            title="1.2"
            unselectable="on"
          >
            <span
              className="c5"
              onClick={[Function]}
            >
              <i
                className="lugia-icon-direction_caret_down  c6"
              />
            </span>
            <span>
              <label
                className="c7"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="c8"
                  onClick={null}
                >
                  <input
                    className="c9"
                    disabled={false}
                    onBlur={[Function]}
                    type="checkbox"
                  />
                  <span
                    checked={false}
                    className="c14"
                    disabled={false}
                  />
                </span>
                <span
                  className="c11"
                >
                  1.2
                </span>
              </label>
            </span>
            <ul
              className="c12"
              data-expanded={true}
            >
              <li
                className="c4"
                selected={false}
                title="1.2.1"
                unselectable="on"
              >
                <span
                  className="c13"
                >
                  <i
                    className="lugia-icon-direction_caret_down  c6"
                  />
                </span>
                <span>
                  <label
                    className="c7"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="c8"
                      onClick={null}
                    >
                      <input
                        className="c9"
                        disabled={false}
                        onBlur={[Function]}
                        type="checkbox"
                      />
                      <span
                        checked={false}
                        className="c14"
                        disabled={false}
                      />
                    </span>
                    <span
                      className="c11"
                    >
                      1.2.1
                    </span>
                  </label>
                </span>
              </li>
              <li
                className="c4"
                selected={false}
                title="1.2.2"
                unselectable="on"
              >
                <span
                  className="c5"
                  onClick={[Function]}
                >
                  <i
                    className="lugia-icon-direction_caret_down  c6"
                  />
                </span>
                <span>
                  <label
                    className="c7"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="c8"
                      onClick={null}
                    >
                      <input
                        className="c9"
                        disabled={false}
                        onBlur={[Function]}
                        type="checkbox"
                      />
                      <span
                        checked={false}
                        className="c14"
                        disabled={false}
                      />
                    </span>
                    <span
                      className="c11"
                    >
                      1.2.2
                    </span>
                  </label>
                </span>
                <ul
                  className="c12"
                  data-expanded={true}
                >
                  <li
                    className="c4"
                    selected={false}
                    title="1.2.2.1"
                    unselectable="on"
                  >
                    <span
                      className="c5"
                      onClick={[Function]}
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c6"
                      />
                    </span>
                    <span>
                      <label
                        className="c7"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <span
                          className="c8"
                          onClick={null}
                        >
                          <input
                            className="c9"
                            disabled={false}
                            onBlur={[Function]}
                            type="checkbox"
                          />
                          <span
                            checked={false}
                            className="c14"
                            disabled={false}
                          />
                        </span>
                        <span
                          className="c11"
                        >
                          1.2.2.1
                        </span>
                      </label>
                    </span>
                    <ul
                      className="c12"
                      data-expanded={true}
                    >
                      <li
                        className="c4"
                        selected={false}
                        title="1.2.2.1.1"
                        unselectable="on"
                      >
                        <span
                          className="c13"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c6"
                          />
                        </span>
                        <span>
                          <label
                            className="c7"
                            disabled={false}
                            onClick={[Function]}
                          >
                            <span
                              className="c8"
                              onClick={null}
                            >
                              <input
                                className="c9"
                                disabled={false}
                                onBlur={[Function]}
                                type="checkbox"
                              />
                              <span
                                checked={false}
                                className="c14"
                                disabled={false}
                              />
                            </span>
                            <span
                              className="c11"
                            >
                              1.2.2.1.1
                            </span>
                          </label>
                        </span>
                      </li>
                      <li
                        className="c4"
                        selected={false}
                        title="1.2.2.1.2"
                        unselectable="on"
                      >
                        <span
                          className="c13"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c6"
                          />
                        </span>
                        <span>
                          <label
                            className="c7"
                            disabled={false}
                            onClick={[Function]}
                          >
                            <span
                              className="c8"
                              onClick={null}
                            >
                              <input
                                className="c9"
                                disabled={false}
                                onBlur={[Function]}
                                type="checkbox"
                              />
                              <span
                                checked={false}
                                className="c14"
                                disabled={false}
                              />
                            </span>
                            <span
                              className="c11"
                            >
                              1.2.2.1.2
                            </span>
                          </label>
                        </span>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="c4"
                    selected={false}
                    title="1.2.2.2"
                    unselectable="on"
                  >
                    <span
                      className="c13"
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c6"
                      />
                    </span>
                    <span>
                      <label
                        className="c7"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <span
                          className="c8"
                          onClick={null}
                        >
                          <input
                            className="c9"
                            disabled={false}
                            onBlur={[Function]}
                            type="checkbox"
                          />
                          <span
                            checked={false}
                            className="c14"
                            disabled={false}
                          />
                        </span>
                        <span
                          className="c11"
                        >
                          1.2.2.2
                        </span>
                      </label>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c15"
  >
    <div
      className="c16"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c17"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "5.583333333333334em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Tree props: query: 2.1.2.1 expandAll: true mutliple: false 1`] = `
.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c7 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c1 {
  min-height: 2.5em;
  line-height: 2.5em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c6 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c4 {
  box-sizing: border-box;
  width: 100%;
  overflow: hidden;
  padding-left: 0.5em;
  display: inline-block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  color: #666666;
}

.c4:hover {
  background-color: #edf0fe;
}

.c5 {
  opacity: 1;
}

.c0 {
  position: relative;
  top: 0px;
  width: 100%;
}

<ul
  className="sv-tree sv-tree-show-line c0 sv-tree-show-line"
  role="tree-node"
  unselectable="on"
>
  <li
    className="c1"
    selected={false}
    title="2"
    unselectable="on"
  >
    <span
      className="c2"
      onClick={[Function]}
    >
      <i
        className="lugia-icon-direction_caret_down  c3"
      />
    </span>
    <span
      className="c4"
      onClick={[Function]}
      onContextMenu={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      selected={false}
      title="2"
    >
      <span
        className="c5"
        title="2"
      >
        2
      </span>
    </span>
    <ul
      className="c6"
      data-expanded={true}
    >
      <li
        className="c1"
        selected={false}
        title="2.1"
        unselectable="on"
      >
        <span
          className="c2"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_caret_down  c3"
          />
        </span>
        <span
          className="c4"
          onClick={[Function]}
          onContextMenu={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          selected={false}
          title="2.1"
        >
          <span
            className="c5"
            title="2.1"
          >
            2.1
          </span>
        </span>
        <ul
          className="c6"
          data-expanded={true}
        >
          <li
            className="c1"
            selected={false}
            title="2.1.2"
            unselectable="on"
          >
            <span
              className="c2"
              onClick={[Function]}
            >
              <i
                className="lugia-icon-direction_caret_down  c3"
              />
            </span>
            <span
              className="c4"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              selected={false}
              title="2.1.2"
            >
              <span
                className="c5"
                title="2.1.2"
              >
                2.1.2
              </span>
            </span>
            <ul
              className="c6"
              data-expanded={true}
            >
              <li
                className="c1"
                selected={false}
                title="2.1.2.1"
                unselectable="on"
              >
                <span
                  className="c7"
                >
                  <i
                    className="lugia-icon-direction_caret_down  c3"
                  />
                </span>
                <span
                  className="c4"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  selected={false}
                  title="2.1.2.1"
                >
                  <span
                    className="c5"
                    title="2.1.2.1"
                  >
                    2.1.2.1
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree props: value: 1 mutliple: false onChange监听 limit 1`] = `
Array [
  .c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c5 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c10 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c4 {
  min-height: 2.5em;
  line-height: 2.5em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c9 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c11 {
  box-sizing: border-box;
  width: 100%;
  overflow: hidden;
  padding-left: 0.5em;
  display: inline-block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  color: #666666;
}

.c11:hover {
  background-color: #edf0fe;
}

.c7 {
  box-sizing: border-box;
  width: 100%;
  overflow: hidden;
  padding-left: 0.5em;
  display: inline-block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  color: #666666;
  background-color: #edf0fe;
}

.c7:hover {
  background-color: #edf0fe;
}

.c8 {
  opacity: 1;
}

.c13 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c14 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c14:hover {
  background-color: #7a7a7a;
}

.c2 {
  height: 20.833333333333336em;
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c12 {
  height: 20.833333333333336em;
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c12 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0px;
  width: 100%;
}

<div
    className="c0 c1"
    onWheel={[Function]}
  >
    <div
      className="c2"
    >
      <ul
        className="sv-tree sv-tree-show-line c3"
        role="tree-node"
        unselectable="on"
      >
        <li
          className="c4"
          selected={true}
          title="1"
          unselectable="on"
        >
          <span
            className="c5"
            onClick={[Function]}
          >
            <i
              className="lugia-icon-direction_caret_down  c6"
            />
          </span>
          <span
            className="c7"
            onClick={[Function]}
            onContextMenu={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            selected={true}
            title="1"
          >
            <span
              className="c8"
              title="1"
            >
              1
            </span>
          </span>
          <ul
            className="c9"
            data-expanded={true}
          >
            <li
              className="c4"
              selected={false}
              title="1.1"
              unselectable="on"
            >
              <span
                className="c10"
              >
                <i
                  className="lugia-icon-direction_caret_down  c6"
                />
              </span>
              <span
                className="c11"
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                title="1.1"
              >
                <span
                  className="c8"
                  title="1.1"
                >
                  1.1
                </span>
              </span>
            </li>
            <li
              className="c4"
              selected={false}
              title="1.2"
              unselectable="on"
            >
              <span
                className="c5"
                onClick={[Function]}
              >
                <i
                  className="lugia-icon-direction_caret_down  c6"
                />
              </span>
              <span
                className="c11"
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                title="1.2"
              >
                <span
                  className="c8"
                  title="1.2"
                >
                  1.2
                </span>
              </span>
              <ul
                className="c9"
                data-expanded={true}
              >
                <li
                  className="c4"
                  selected={false}
                  title="1.2.1"
                  unselectable="on"
                >
                  <span
                    className="c10"
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c6"
                    />
                  </span>
                  <span
                    className="c11"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    title="1.2.1"
                  >
                    <span
                      className="c8"
                      title="1.2.1"
                    >
                      1.2.1
                    </span>
                  </span>
                </li>
                <li
                  className="c4"
                  selected={false}
                  title="1.2.2"
                  unselectable="on"
                >
                  <span
                    className="c5"
                    onClick={[Function]}
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c6"
                    />
                  </span>
                  <span
                    className="c11"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    title="1.2.2"
                  >
                    <span
                      className="c8"
                      title="1.2.2"
                    >
                      1.2.2
                    </span>
                  </span>
                  <ul
                    className="c9"
                    data-expanded={true}
                  >
                    <li
                      className="c4"
                      selected={false}
                      title="1.2.2.1"
                      unselectable="on"
                    >
                      <span
                        className="c5"
                        onClick={[Function]}
                      >
                        <i
                          className="lugia-icon-direction_caret_down  c6"
                        />
                      </span>
                      <span
                        className="c11"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        selected={false}
                        title="1.2.2.1"
                      >
                        <span
                          className="c8"
                          title="1.2.2.1"
                        >
                          1.2.2.1
                        </span>
                      </span>
                      <ul
                        className="c9"
                        data-expanded={true}
                      >
                        <li
                          className="c4"
                          selected={false}
                          title="1.2.2.1.1"
                          unselectable="on"
                        >
                          <span
                            className="c10"
                          >
                            <i
                              className="lugia-icon-direction_caret_down  c6"
                            />
                          </span>
                          <span
                            className="c11"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            selected={false}
                            title="1.2.2.1.1"
                          >
                            <span
                              className="c8"
                              title="1.2.2.1.1"
                            >
                              1.2.2.1.1
                            </span>
                          </span>
                        </li>
                        <li
                          className="c4"
                          selected={false}
                          title="1.2.2.1.2"
                          unselectable="on"
                        >
                          <span
                            className="c10"
                          >
                            <i
                              className="lugia-icon-direction_caret_down  c6"
                            />
                          </span>
                          <span
                            className="c11"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            selected={false}
                            title="1.2.2.1.2"
                          >
                            <span
                              className="c8"
                              title="1.2.2.1.2"
                            >
                              1.2.2.1.2
                            </span>
                          </span>
                        </li>
                      </ul>
                    </li>
                    <li
                      className="c4"
                      selected={false}
                      title="1.2.2.2"
                      unselectable="on"
                    >
                      <span
                        className="c10"
                      >
                        <i
                          className="lugia-icon-direction_caret_down  c6"
                        />
                      </span>
                      <span
                        className="c11"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        selected={false}
                        title="1.2.2.2"
                      >
                        <span
                          className="c8"
                          title="1.2.2.2"
                        >
                          1.2.2.2
                        </span>
                      </span>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <div
      className="c12"
    >
      <div
        className="c13"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
        onMouseUp={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "20.833333333333336em",
          }
        }
      >
        <div
          className="c14"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "5.583333333333334em",
              "top": "0em",
            }
          }
        />
      </div>
    </div>
  </div>,
  <button
    onClick={[Function]}
  />,
]
`;

exports[`Tree props: value: 1 mutliple: true onChange监听 limit 1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c7 {
  font-size: 1.4rem;
  cursor: pointer;
  color: #333333;
  width: none;
  box-sizing: border-box;
  padding: 0;
  list-style: none;
  display: inline-block;
  position: relative;
  white-space: nowrap;
  display: inline-block;
  margin-right: 2.142857142857143em;
}

.c7:hover > span span {
  border: 1px solid #684fff;
}

.c8 {
  margin: 0;
  outline: none;
  line-height: 1;
  vertical-align: text-bottom;
  display: inline-block;
}

.c11 {
  padding-left: 0.7142857142857143em;
}

.c9 {
  position: absolute;
  left: 0;
  z-index: 1;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.c14 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #fff;
  border: 1px solid #cccccc;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14:hover {
  border: 1px solid #684fff;
}

.c14::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.35714285714285715em;
  top: 0.14285714285714288em;
  width: 0.4285714285714286em;
  height: 0.7142857142857143em;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c10 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #684fff;
  border: 1px solid #684fff;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10:hover {
  border: 1px solid #684fff;
}

.c10::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.2142857142857143em;
  top: 0.5em;
  width: 0.7142857142857143em;
  height: 0.07142857142857144em;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all .2s cubic-bezier(.03,.86,.56,.87);
  transition: all .2s cubic-bezier(.03,.86,.56,.87);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c5 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c13 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c4 {
  min-height: 2.5em;
  line-height: 2.5em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c12 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c16 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c17 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c17:hover {
  background-color: #7a7a7a;
}

.c2 {
  height: 20.833333333333336em;
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c15 {
  height: 20.833333333333336em;
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c15 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0px;
  width: 100%;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <ul
      className="sv-tree sv-tree-show-line c3"
      role="tree-node"
      unselectable="on"
    >
      <li
        className="c4"
        selected={false}
        title="1"
        unselectable="on"
      >
        <span
          className="c5"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_caret_down  c6"
          />
        </span>
        <span>
          <label
            className="c7"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c8"
              onClick={null}
            >
              <input
                className="c9"
                disabled={false}
                onBlur={[Function]}
                type="checkbox"
              />
              <span
                checked={false}
                className="c10"
                disabled={false}
              />
            </span>
            <span
              className="c11"
            >
              1
            </span>
          </label>
        </span>
        <ul
          className="c12"
          data-expanded={true}
        >
          <li
            className="c4"
            selected={false}
            title="1.1"
            unselectable="on"
          >
            <span
              className="c13"
            >
              <i
                className="lugia-icon-direction_caret_down  c6"
              />
            </span>
            <span>
              <label
                className="c7"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="c8"
                  onClick={null}
                >
                  <input
                    className="c9"
                    disabled={false}
                    onBlur={[Function]}
                    type="checkbox"
                  />
                  <span
                    checked={false}
                    className="c14"
                    disabled={false}
                  />
                </span>
                <span
                  className="c11"
                >
                  1.1
                </span>
              </label>
            </span>
          </li>
          <li
            className="c4"
            selected={false}
            title="1.2"
            unselectable="on"
          >
            <span
              className="c5"
              onClick={[Function]}
            >
              <i
                className="lugia-icon-direction_caret_down  c6"
              />
            </span>
            <span>
              <label
                className="c7"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="c8"
                  onClick={null}
                >
                  <input
                    className="c9"
                    disabled={false}
                    onBlur={[Function]}
                    type="checkbox"
                  />
                  <span
                    checked={false}
                    className="c14"
                    disabled={false}
                  />
                </span>
                <span
                  className="c11"
                >
                  1.2
                </span>
              </label>
            </span>
            <ul
              className="c12"
              data-expanded={true}
            >
              <li
                className="c4"
                selected={false}
                title="1.2.1"
                unselectable="on"
              >
                <span
                  className="c13"
                >
                  <i
                    className="lugia-icon-direction_caret_down  c6"
                  />
                </span>
                <span>
                  <label
                    className="c7"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="c8"
                      onClick={null}
                    >
                      <input
                        className="c9"
                        disabled={false}
                        onBlur={[Function]}
                        type="checkbox"
                      />
                      <span
                        checked={false}
                        className="c14"
                        disabled={false}
                      />
                    </span>
                    <span
                      className="c11"
                    >
                      1.2.1
                    </span>
                  </label>
                </span>
              </li>
              <li
                className="c4"
                selected={false}
                title="1.2.2"
                unselectable="on"
              >
                <span
                  className="c5"
                  onClick={[Function]}
                >
                  <i
                    className="lugia-icon-direction_caret_down  c6"
                  />
                </span>
                <span>
                  <label
                    className="c7"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="c8"
                      onClick={null}
                    >
                      <input
                        className="c9"
                        disabled={false}
                        onBlur={[Function]}
                        type="checkbox"
                      />
                      <span
                        checked={false}
                        className="c14"
                        disabled={false}
                      />
                    </span>
                    <span
                      className="c11"
                    >
                      1.2.2
                    </span>
                  </label>
                </span>
                <ul
                  className="c12"
                  data-expanded={true}
                >
                  <li
                    className="c4"
                    selected={false}
                    title="1.2.2.1"
                    unselectable="on"
                  >
                    <span
                      className="c5"
                      onClick={[Function]}
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c6"
                      />
                    </span>
                    <span>
                      <label
                        className="c7"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <span
                          className="c8"
                          onClick={null}
                        >
                          <input
                            className="c9"
                            disabled={false}
                            onBlur={[Function]}
                            type="checkbox"
                          />
                          <span
                            checked={false}
                            className="c14"
                            disabled={false}
                          />
                        </span>
                        <span
                          className="c11"
                        >
                          1.2.2.1
                        </span>
                      </label>
                    </span>
                    <ul
                      className="c12"
                      data-expanded={true}
                    >
                      <li
                        className="c4"
                        selected={false}
                        title="1.2.2.1.1"
                        unselectable="on"
                      >
                        <span
                          className="c13"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c6"
                          />
                        </span>
                        <span>
                          <label
                            className="c7"
                            disabled={false}
                            onClick={[Function]}
                          >
                            <span
                              className="c8"
                              onClick={null}
                            >
                              <input
                                className="c9"
                                disabled={false}
                                onBlur={[Function]}
                                type="checkbox"
                              />
                              <span
                                checked={false}
                                className="c14"
                                disabled={false}
                              />
                            </span>
                            <span
                              className="c11"
                            >
                              1.2.2.1.1
                            </span>
                          </label>
                        </span>
                      </li>
                      <li
                        className="c4"
                        selected={false}
                        title="1.2.2.1.2"
                        unselectable="on"
                      >
                        <span
                          className="c13"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c6"
                          />
                        </span>
                        <span>
                          <label
                            className="c7"
                            disabled={false}
                            onClick={[Function]}
                          >
                            <span
                              className="c8"
                              onClick={null}
                            >
                              <input
                                className="c9"
                                disabled={false}
                                onBlur={[Function]}
                                type="checkbox"
                              />
                              <span
                                checked={false}
                                className="c14"
                                disabled={false}
                              />
                            </span>
                            <span
                              className="c11"
                            >
                              1.2.2.1.2
                            </span>
                          </label>
                        </span>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="c4"
                    selected={false}
                    title="1.2.2.2"
                    unselectable="on"
                  >
                    <span
                      className="c13"
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c6"
                      />
                    </span>
                    <span>
                      <label
                        className="c7"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <span
                          className="c8"
                          onClick={null}
                        >
                          <input
                            className="c9"
                            disabled={false}
                            onBlur={[Function]}
                            type="checkbox"
                          />
                          <span
                            checked={false}
                            className="c14"
                            disabled={false}
                          />
                        </span>
                        <span
                          className="c11"
                        >
                          1.2.2.2
                        </span>
                      </label>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c15"
  >
    <div
      className="c16"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c17"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "5.583333333333334em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;
